# YolkDemoService

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
scripts/: demo_roleplay.py  init_db.py
src/yolk/: config.py  database.py  main.py
src/yolk/api/: deps.py
src/yolk/api/routes/: calls.py  sessions.py  users.py
src/yolk/api/websocket/: roleplay.py
src/yolk/core/: events.py  state_machine.py  tracing.py
src/yolk/messaging/: broker.py
src/yolk/models/: base.py  call.py  session.py  user.py
src/yolk/schemas/: call.py  common.py  session.py  user.py
src/yolk/services/: evaluation.py  llm.py  orchestrator.py  roleplay.py
tests/: test_api.py  test_evaluation.py  test_orchestrator.py  test_state_machine.py  test_websocket.py
